force-app/main/default/objects/Subscription__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Auto populated based on the sum of recurring amount change on opportunities</description>
    <label>Total Recurring Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>