force-app/main/default/objects/Subscription__c/fields/At_Risk_Amount__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Amount__c</fullName>
    <label>At Risk Amount</label>
    <summarizedField>CR_Engagement__c.CR_Engagement_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>CR_Engagement__c.CR_Engagement_Status__c</field>
        <operation>equals</operation>
        <value>Not Started, In Process</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>CR_Engagement__c.CR_Engagement_Type__c</field>
        <operation>equals</operation>
        <value>D - At Risk</value>
    </summaryFilterItems>
    <summaryForeignKey>CR_Engagement__c.Subscription__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>