force-app/main/default/objects/Subscription__c/fields/At_Risk_Flag__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Flag__c</fullName>
    <formula>IF(ISPICKVAL(CSM_Health_Rating__c,&quot;D - At Risk / Anticipated Cancellation&quot;),TRUE,FALSE)</formula>
    <label>At Risk Flag</label>
    <type>Checkbox</type>
</CustomField>