force-app/main/default/objects/Subscription__c/fields/Business_Owner_Audited__c.field-meta.xml
<CustomField>
    <fullName>Business_Owner_Audited__c</fullName>
    <formula>IF(
  Business_Owner_Contacts_Audited__c &gt; 0,
  TRUE,
  FALSE
)</formula>
    <label>Business Owner Audited?</label>
    <type>Checkbox</type>
</CustomField>