force-app/main/default/objects/Subscription__c/fields/CRD__c.field-meta.xml
<CustomField>
    <fullName>CRD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSM Account Mgr</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Subscriptions_CRD</relationshipName>
    <type>Lookup</type>
</CustomField>