force-app/main/default/objects/Subscription__c/fields/CSM_Health_Rating__c.field-meta.xml
<CustomField>
    <fullName>CSM_Health_Rating__c</fullName>
    <label>CSM Health Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
                <color>#FF0000</color>
                <label>Red</label>
            </value>
            <value>
                <fullName>Amber</fullName>
                <color>#F3D904</color>
                <label>Amber</label>
            </value>
            <value>
                <fullName>Green</fullName>
                <color>#33CC00</color>
                <default>true</default>
                <label>Green</label>
            </value>
            <value>
                <fullName>Black</fullName>
                <color>#000000</color>
                <label>Black</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>