force-app/main/default/objects/Subscription__c/fields/CSM_Health_Rating_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>CSM_Health_Rating_Last_Modified__c</fullName>
    <label>CSM Health Rating - Last Modified</label>
    <type>DateTime</type>
</CustomField>