force-app/main/default/objects/Subscription__c/fields/Customer_Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Customer_Lifecycle_Stage__c</fullName>
    <label>Product Implementation Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Project not started yet</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
            <value>
                <fullName>Within 90 days of Production</fullName>
            </value>
            <value>
                <fullName>In Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>