force-app/main/default/objects/Subscription__c/fields/Earliest_Won_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Won_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Earliest Won Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>