force-app/main/default/objects/Subscription__c/fields/FMS_Discussion_Completed__c.field-meta.xml
<CustomField>
    <fullName>FMS_Discussion_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FMS Discussion Completed</label>
    <type>Checkbox</type>
</CustomField>