force-app/main/default/objects/Subscription__c/fields/GS_Relationship__c.field-meta.xml
<CustomField>
    <fullName>GS_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GS Relationship</label>
    <referenceTo>JBCXM__GSRelationship__c</referenceTo>
    <relationshipLabel>Product Customers</relationshipLabel>
    <relationshipName>Product_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>