force-app/main/default/objects/Subscription__c/fields/Health_Still_Accurate__c.field-meta.xml
<CustomField>
    <fullName>Health_Still_Accurate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Health Still Accurate</label>
    <type>Checkbox</type>
</CustomField>