force-app/main/default/objects/Subscription__c/fields/IT_Administrator_Audited__c.field-meta.xml
<CustomField>
    <fullName>IT_Administrator_Audited__c</fullName>
    <formula>IF(
  IT_Administrator_Contacts_Audited__c &gt; 0,
  TRUE,
  FALSE
)</formula>
    <label>IT Administrator Audited?</label>
    <type>Checkbox</type>
</CustomField>