force-app/main/default/objects/Subscription__c/fields/Last_CRM_Check_In__c.field-meta.xml
<CustomField>
    <fullName>Last_CRM_Check_In__c</fullName>
    <label>Last CSM Check In</label>
    <type>Date</type>
</CustomField>