force-app/main/default/objects/Subscription__c/fields/Lead_User_Audited__c.field-meta.xml
<CustomField>
    <fullName>Lead_User_Audited__c</fullName>
    <formula>IF(
  Lead_User_Contacts_Audited__c &gt; 0,
  TRUE,
  FALSE
)</formula>
    <label>Lead User Audited?</label>
    <type>Checkbox</type>
</CustomField>