force-app/main/default/objects/Subscription__c/fields/Lead_User_Contacts_Audited__c.field-meta.xml
<CustomField>
    <fullName>Lead_User_Contacts_Audited__c</fullName>
    <label>Lead User Contacts (Audited)</label>
    <summaryFilterItems>
        <field>Subscription_Contact__c.Role__c</field>
        <operation>equals</operation>
        <value>Lead User</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Subscription_Contact__c.Audited_Date__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Subscription_Contact__c.Subscription__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>