force-app/main/default/objects/Subscription__c/fields/Most_Recent_Term_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Term_Start_Date__c</fullName>
    <label>Most Recent Term Start Date</label>
    <type>Date</type>
</CustomField>