force-app/main/default/objects/Subscription__c/fields/Needs_Attention_Count__c.field-meta.xml
<CustomField>
    <fullName>Needs_Attention_Count__c</fullName>
    <label>Needs Attention Count</label>
    <summaryFilterItems>
        <field>CR_Engagement__c.CR_Engagement_Status__c</field>
        <operation>equals</operation>
        <value>Not Started, In Process</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>CR_Engagement__c.CR_Engagement_Type__c</field>
        <operation>equals</operation>
        <value>C - Needs Attention</value>
    </summaryFilterItems>
    <summaryForeignKey>CR_Engagement__c.Subscription__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>