force-app/main/default/objects/Subscription__c/fields/Next_Invoice_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Invoice_Due_Date__c</fullName>
    <label>Next Invoice Due Date</label>
    <type>Date</type>
</CustomField>