force-app/main/default/objects/Subscription__c/fields/OnePlace_Legacy_Instance_Notes__c.field-meta.xml
<CustomField>
    <fullName>OnePlace_Legacy_Instance_Notes__c</fullName>
    <description>OnePlace Legacy Instance Notes</description>
    <inlineHelpText>OnePlace Legacy Instance Notes</inlineHelpText>
    <label>Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>