force-app/main/default/objects/Subscription__c/fields/Primary_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Primary_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Subscription</label>
    <type>Checkbox</type>
</CustomField>