force-app/main/default/objects/Subscription__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line - EXPIRED</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Intapp Integrate</fullName>
            </value>
            <value>
                <fullName>Intapp Integrate - Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Conflicts</fullName>
                <color>#E27001</color>
                <label>Intapp Open - Conflicts</label>
            </value>
            <value>
                <fullName>Intapp Open - Conflicts - Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Experience</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Experience - Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Intake</fullName>
                <color>#E27001</color>
                <label>Intapp Open - Intake</label>
            </value>
            <value>
                <fullName>Intapp Open - Intake - Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Terms</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Terms - Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Time</fullName>
                <color>#78C953</color>
                <label>Intapp Time</label>
            </value>
            <value>
                <fullName>Intapp Time - Cloud</fullName>
            </value>
            <value>
                <fullName>TFG - Other</fullName>
                <color>#E27001</color>
                <label>TFG - Other</label>
            </value>
            <value>
                <fullName>Intapp Walls</fullName>
            </value>
            <value>
                <fullName>Third Party Product - Experience</fullName>
            </value>
            <value>
                <fullName>LegalKey</fullName>
            </value>
            <value>
                <fullName>Third Party Product - D&amp;B</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Pricing - Cloud</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
                <label>PSP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>