force-app/main/default/objects/Subscription__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reference</label>
    <type>Checkbox</type>
</CustomField>