force-app/main/default/objects/Subscription__c/fields/Referenceable_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Referenceable_Contacts__c</fullName>
    <label>Referenceable Contacts</label>
    <summaryFilterItems>
        <field>Subscription_Contact__c.Reference_Status__c</field>
        <operation>equals</operation>
        <value>Active Reference</value>
    </summaryFilterItems>
    <summaryForeignKey>Subscription_Contact__c.Subscription__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>