force-app/main/default/objects/Subscription__c/fields/SRT_Installed__c.field-meta.xml
<CustomField>
    <fullName>SRT_Installed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that the Solution Engineer has installed and configured the SRT client application</inlineHelpText>
    <label>SRT - Installed</label>
    <type>Checkbox</type>
</CustomField>