force-app/main/default/objects/Subscription__c/fields/SRT_Status__c.field-meta.xml
<CustomField>
    <fullName>SRT_Status__c</fullName>
    <inlineHelpText>What is the installation status for the Support Reporting Tool (SRT)?</inlineHelpText>
    <label>SRT Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Installed</fullName>
                <default>true</default>
                <label>Not Installed</label>
            </value>
            <value>
                <fullName>Installed - Not checking in yet</fullName>
            </value>
            <value>
                <fullName>Installed - Checking in correctly</fullName>
            </value>
            <value>
                <fullName>Installed - Stopped checking in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>