force-app/main/default/objects/Subscription__c/fields/Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Term_End_Date__c</fullName>
    <label>Term End Date</label>
    <type>Date</type>
</CustomField>