force-app/main/default/objects/Subscription__c/fields/Trainer_Audited__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Audited__c</fullName>
    <formula>IF(
  Trainer_Contacts_Audited__c &gt; 0,
  TRUE,
  FALSE
)</formula>
    <label>Trainer Audited?</label>
    <type>Checkbox</type>
</CustomField>