force-app/main/default/objects/Subscription__c/fields/X3_Contacts_Audited__c.field-meta.xml
<CustomField>
    <fullName>X3_Contacts_Audited__c</fullName>
    <formula>IF(
  Roles_Audited__c &gt; 2,
  TRUE,
  FALSE
)</formula>
    <label>3 Contacts Audited?</label>
    <type>Checkbox</type>
</CustomField>