force-app/main/default/objects/Subscription__c/fields/X5_Contacts_Audited__c.field-meta.xml
<CustomField>
    <fullName>X5_Contacts_Audited__c</fullName>
    <formula>IF(
  Roles_Audited__c &gt; 4,
  TRUE,
  FALSE
)</formula>
    <label>5 Contacts Audited?</label>
    <type>Checkbox</type>
</CustomField>